# cppCourse

./: .gitignore  CMakeLists.txt  README.md  buildApp.bat
cppApps/Interfaces/include/: FractionClass.hpp  developperClass.hpp  empoloyeeClass.hpp  managerClass.hpp  utils.hpp
cppApps/Interfaces/source/: FractionClass.cpp  developerClass.cpp  employeeClass.cpp  managerClass.cpp  utils.cpp
cppApps/STLApp/: CmakeLists.txt
cppApps/STLApp/include/: STLApp.hpp  vectorUtils.hpp
cppApps/STLApp/source/: STLApp.cpp  vectorUtils.cpp
cppApps/applications/include/: EmployeeApp.hpp  application.hpp  operatoroverload.hpp
cppApps/applications/source/: EmployeeApp.cpp  bankAccntApp.cpp  operatorOverload.cpp
cppApps/bankAccountApp/: CmakeLists.txt
cppApps/bankAccountApp/include/: bankAccntApp.hpp  bankAccountAppAll.hpp
cppApps/bankAccountApp/interface/include/: BankAccntClass.hpp
cppApps/bankAccountApp/interface/source/: bankAccntClass.cpp
cppApps/bookStorageApp/: CMakeLists.txt
cppApps/bookStorageApp/include/: bookStorageApp.hpp  bookStorageAppAll.hpp
cppApps/bookStorageApp/interface/include/: bookClass.hpp
cppApps/bookStorageApp/interface/source/: bookClass.cpp
cppApps/bookStorageApp/source/: bookStorageApp.cpp
main/: main.cpp
